nem egészen értem mi történik sajnos (github oldalról)

--- a/gyak11_12/wwwroot/hajo.html
+++ b/gyak11_12/wwwroot/hajo.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-    Hello World!
+    <p>Üdvözlet!</p>
+    <p>A hajó.html eléréséhez kattints <a href="hajo.html">ide</a>!</p>
 </body>
 </html>
