--- a/gyak11_12/wwwroot/hajo.html
+++ b/gyak11_12/wwwroot/hajo.html
@@ -5,7 +5,76 @@
     <title></title>
 </head>
 <body>
-    <p>Üdvözlet!</p>
-    <p>A hajó.html eléréséhez kattints <a href="hajo.html">ide</a>!</p>
+    <div id="külső">
+        <div id="kérdés_szöveg">
+            Kérdés szövege
+        </div>
+
+        <style>
+            html, body {
+                height: 100%;
+            }
+
+            div{
+                margin:10px;
+                border: 1px solid fuchsia
+            }
+
+            #külső {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            #kérdés_szöveg{
+
+            }
+
+            #középső {
+                display: flex;
+                flex-direction: row;
+                flex-grow:1
+            }
+
+            #válaszok {
+                flex-grow: 1;
+                flex-shrink: 1;
+            }
+
+            #vezérlő{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+            }
+
+            #kép {
+                overflow: hidden;
+                flex-shrink:0;
+            }
+
+            .gomb{
+                padding: 20px;
+                width: 80px;
+            }
+
+            .kerdes{
+
+            }
+        </style>
+
+        <div id="középső">
+            <div id="válaszok">
+                <div id="válasz1" class="kerdes">Válasz 1</div>
+                <div id="válasz2" class="kerdes">Válasz 2</div>
+                <div id="válasz3" class="kerdes">Válasz 3</div>
+            </div>
+            <div id="kép">
+                <img id="kép1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg" />
+            </div>
+        </div>
+        <div id="vezérlő">
+            <div class="gomb kattintható">Vissza</div>
+            <div class="gomb kattintható">Előre</div>
+        </div>
+    </div>
 </body>
-</html>
