na kezdem érteni mi történik

--- a/gyak11_12/wwwroot/hajo.html
+++ b/gyak11_12/wwwroot/hajo.html
@@ -17,7 +17,7 @@
 
             div{
                 margin:10px;
-                border: 1px solid fuchsia
+                border: 1px solid black
             }
 
             #külső {
@@ -60,13 +60,26 @@
             .kerdes{
 
             }
+
+            .kattinthato:hover{
+                background-color: fuchsia;
+                color: white;
+            }
+
+            .jo{
+                background-color: lawngreen;
+            }
+
+            .rossz{
+                background-color: red;
+            }
         </style>
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes">Válasz 1</div>
-                <div id="válasz2" class="kerdes">Válasz 2</div>
-                <div id="válasz3" class="kerdes">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattinthato">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattinthato">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattinthato">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg" />
