kérdés szövegének betöltése a questionId-val működik valamiért.

--- a/gyak11_12/wwwroot/hajo.html
+++ b/gyak11_12/wwwroot/hajo.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <div id="külső">
-        <div id="kérdés_szöveg">
-            Kérdés szövege
-        </div>
+        <div id="kérdés_szöveg">Kérdés Szövege</div>
 
         <style>
             html, body {
