valamilyen okból a képek nem megfelelően működnek, csak az újonnan gyakorló poolba bekerülő kérdések képeit jeleníti meg, és nem szedi le a következő kérdésnél

--- a/gyak11_12/wwwroot/hajo.html
+++ b/gyak11_12/wwwroot/hajo.html
@@ -85,7 +85,7 @@
                 <div id="válasz3" onclick="választás(3)" class="kerdes kattinthato">Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg"/>
+                <img id="kép1" src=""/>
             </div>
         </div>
         <div id="vezérlő">
